[package]
name = "stream-yolo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
crossbeam = "0.8.4"
glib = "0.20.7"
gstreamer = "0.23.3"
gstreamer-app = "0.23.3"
gstreamer-video = "0.23.3"
image = "0.25.5"
ort = { version = "2.0.0-rc.9", features = ["coreml"] }
png = "0.17.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
yolo-rs = "0.1.1"
